# git-snapshot

./: .gitignore  LICENSE  README.md  git_snapshot.py  pyproject.toml
src/git-snapshot/: cli.py  core.py  utils.py
src/git_snapshot/: __init__.py  cli.py  core.py  exceptions.py  utils.py
