[project]
name = "git-snapshot"
version = "0.1.0"
description = "A command-line tool to create clean .7z snapshots of local Git repositories, respecting .gitignore rules."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["py7zr", "pathspec", "click>=8.2.1"]

[project.scripts]
git-snapshot = "git_snapshot:main"

[tool.uv]
package = true

[tool.setuptools]
py-modules = ["git_snapshot"]
